# RT-Template

./: .gitignore  CMakeLists.txt  Makefile  Material.cpp  Material.d  Material.h  README.md  dna.txt  importer.cpp  importer.d  intersection_record.h  main.cpp  main.d  main.h  output_image.ppm  pathtracer.cpp  pathtracer.d  pathtracer.h  perspective_camera.cpp  perspective_camera.h  primitive.cpp  primitive.d  primitive.h  raytracer.cpp  raytracer.d  scene.cpp  scene.d  scene.h  sphere.cpp  sphere.d  sphere.h  swpathtracer  triangle.cpp  triangle.d  triangle.h
